Post max-width tweak to help prevent page stretching.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -208,6 +208,8 @@ a.bodylink {
 }
 div.post {
 	max-width: 97%;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
 }
 div.post .body {
 	word-wrap: break-word;
